# ExtendedLsdSlam

./: .gitignore  .gitignore~  rosrun.sh
lsd_slam_core/: CMakeLists.txt  CMakeLists.txt~  CMakeLists.txt~.orig  CMakeLists_MyVersion.txt
lsd_slam_core/cmake/: FindEigen3.cmake  FindSuiteParse.cmake
lsd_slam_core/src/: LiveSLAMWrapper.cpp  SlamSystem.cpp  SlamSystem.h  main_live_odometry.cpp  main_on_images.cpp
lsd_slam_core/src/DataStructures/: Frame.cpp  Frame.h  FramePoseStruct.cpp
lsd_slam_core/src/IOWrapper/: Output3DWrapper.h  Timestamp.cpp  Timestamp.h  slamgroundtruth.cpp  slamgroundtruth.h  slaminputdata.cpp  slaminputdata.h  slaminputdatacontainer.cpp  slaminputdatacontainer.h
lsd_slam_core/src/IOWrapper/ROS/: ROSImageStreamThread.cpp  ROSImageStreamThread.h  ROSOutput3DWrapper.cpp  ROSOutput3DWrapper.h  camera_driver.cpp  camera_driver.h
lsd_slam_core/src/Tracking/: SE3Tracker.cpp  TrackingReference.h
lsd_slam_core/src/util/: SophusUtil.h  foldercontroller.cpp  foldercontroller.h
lsd_slam_viewer/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_MyVersion.txt  CMakeLists_original.txt
lsd_slam_viewer/cmake/: FindEigen3.cmake  FindQGLViewer.cmake  FindQGLViewer.cmake~
lsd_slam_viewer/msg/: keyframeMsg.msg
lsd_slam_viewer/src/: KeyFrameDisplay.cpp  KeyFrameGraphDisplay.cpp  PointCloudViewer.cpp  PointCloudViewer.cpp~  PointCloudViewer.h  main_viewer.cpp
myTestViewer/: CMakeLists.txt  manifest.xml
myTestViewer/cfg/: LSDSLAMViewerParams.cfg
myTestViewer/cfg/cpp/myTestViewer/: LSDSLAMViewerParamsConfig.h
myTestViewer/cmake/: FindQGLViewer.cmake
myTestViewer/docs/: LSDSLAMViewerParamsConfig-usage.dox
myTestViewer/msg_gen/cpp/include/myTestViewer/: keyframeGraphMsg.h  keyframeMsg.h
myTestViewer/msg_gen/lisp/: _package.lisp  _package_keyframeGraphMsg.lisp  _package_keyframeMsg.lisp  keyframeGraphMsg.lisp  keyframeMsg.lisp  myTestViewer-msg.asd
myTestViewer/src/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.h  PointCloudViewer.cpp  PointCloudViewer.h  main_viewer.cpp
myTestViewer/src/myTestViewer/cfg/: LSDSLAMViewerParamsConfig.py
myTestViewer/src/myTestViewer/msg/: _keyframeGraphMsg.py  _keyframeMsg.py
